# HARvestGym

./: .gitattributes  BROWSER_AGENT.md  BUILD_NOTES.md  Dockerfile  GROUND_TRUTH_EXTRACTION.md  HAR_TASK_LIST.md  JUDGE.md  README.md  TOOLS.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  parameter_pools.json  pyproject.toml  validate_catalog.py
.embed_cache/: embed_cache.npz
catalogs/: forum.json  osm.json  shopping.json  shopping_admin.json  wikipedia.json
hars/: forum.har  shopping.har  shopping_admin.har  wikipedia.har
openenv_harvestgym.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: build_parameter_pools.py  inspect_har_endpoints.py
server/: app.py  episode.py  judge.py  models.py
server/tools/: browser_agent.py  curl_exec.py  embed_cache.py  html_distiller.py  search_endpoints.py  search_episode_data.py
tests/: test_e2e_episode.py  test_real_har.py  tool_browser_agent.py  tool_curl_exec.py  tool_search_endpoints.py  tool_search_episode_data.py
tests/mock_data/: mock_catalog.json  mock_har.json
